bpo-46091: Correctly calculate indentation levels for whitespace lines with continuation characters